# multiplayer-tetris-game

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt
client/include/: ClientNetworkHandler.hpp  RendererPreview.hpp
client/include/gui/: MainWindow.hpp
client/src/: ClientNetworkHandler.cpp  ClientNetworkHandler.hpp  RendererFacilities.cpp  RendererGame.cpp  RendererGame.hpp  RendererPreview.cpp  main.cpp
client/src/gui/: MainWindow.cpp
common/: CMakeLists.txt
common/include/: Board.hpp  GameState.hpp  MessageProtocol.hpp  Tetromino.hpp  TetrominoFactory.hpp
common/src/: Board.cpp  GameState.cpp  MessageProtocol.cpp  Tetromino.cpp  TetrominoFactory.cpp
server/: CMakeLists.txt
server/include/: ClientSession.h  Game.h  Server.h
server/src/: Game.cpp  Server.cpp  main.cpp
